@@ -20,7 +20,7 @@
 #include "prefadvanced.h"
 #include "images.h"
 #include "preferences.h"
-
+#include "config.h"
 #include <QColorDialog>
 
 PrefAdvanced::PrefAdvanced(QWidget * parent, Qt::WindowFlags f)
@@ -30,6 +30,12 @@ PrefAdvanced::PrefAdvanced(QWidget * parent, Qt::WindowFlags f)
 
 #ifndef Q_OS_WIN
 	shortnames_check->hide();
+#endif
+
+#if !USE_COLORKEY
+	colorkey_label->hide();
+	colorkey_view->hide();
+	changeButton->hide();
 #endif
 
 	// Monitor aspect
@@ -90,7 +96,9 @@ void PrefAdvanced::setData(Preferences * pref) {
 	setMplayerAdditionalArguments( pref->mplayer_additional_options );
 	setMplayerAdditionalVideoFilters( pref->mplayer_additional_video_filters );
 	setMplayerAdditionalAudioFilters( pref->mplayer_additional_audio_filters );
+#if USE_COLORKEY
 	setColorKey( pref->color_key );
+#endif
 
 	setLogMplayer( pref->log_mplayer );
 	setLogSmplayer( pref->log_smplayer );
@@ -108,8 +116,10 @@ void PrefAdvanced::setData(Preferences * pref) {
 void PrefAdvanced::getData(Preferences * pref) {
 	requires_restart = false;
 	clearing_background_changed = false;
-	colorkey_changed = false;
 	monitor_aspect_changed = false;
+#if USE_COLORKEY
+	colorkey_changed = false;
+#endif
 
 	if (pref->monitor_aspect != monitorAspect()) {
 		pref->monitor_aspect = monitorAspect();
@@ -126,12 +136,13 @@ void PrefAdvanced::getData(Preferences * pref) {
 	TEST_AND_SET(pref->mplayer_additional_options, mplayerAdditionalArguments());
 	TEST_AND_SET(pref->mplayer_additional_video_filters, mplayerAdditionalVideoFilters());
 	TEST_AND_SET(pref->mplayer_additional_audio_filters, mplayerAdditionalAudioFilters());
+#if USE_COLORKEY
 	if (pref->color_key != colorKey()) {
 		pref->color_key = colorKey();
 		colorkey_changed = true;
 		requires_restart = true;
 	}
-
+#endif
 	pref->log_mplayer = logMplayer();
 	pref->log_smplayer = logSmplayer();
 	pref->log_filter = logFilter();
@@ -207,6 +218,7 @@ QString PrefAdvanced::mplayerAdditionalAudioFilters() {
 	return mplayer_afilters_edit->text();
 }
 
+#if USE_COLORKEY
 void PrefAdvanced::setColorKey(unsigned int c) {
 	QString color = QString::number(c, 16);
 	while (color.length() < 6) color = "0"+color;
@@ -227,6 +239,7 @@ unsigned int PrefAdvanced::colorKey() {
 
 	return color;
 }
+#endif
 
 void PrefAdvanced::on_changeButton_clicked() {
 	//bool ok;
