@@ -212,7 +212,7 @@
           <number>6</number>
          </property>
          <item>
-          <widget class="QLabel" name="textLabel1_23" >
+          <widget class="QLabel" name="colorkey_label" >
            <property name="text" >
             <string>&amp;Colorkey:</string>
            </property>
